--- a/quiz/index.html
+++ b/quiz/index.html
@@ -1,65 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz</title>
-</head>
-<body>
-    <nav>
-        <span>freeCodeCamp()</span>
-        <span>HTML/CSS Quiz</span>
-        <span>INFO</span>
-        <span>HTML</span>
-        <span>CSS</span>
-    </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="freeCodeCamp Accessibility Quiz practice project" />
+    <title>Accessibility Quiz</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <header>
-        <h1>Student Info</h1>
+      <img id="logo" src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg">
+      <h1>HTML/CSS Quiz</h1>
+      <nav>
+        <ul>
+          <li><a href="#student-info">INFO</a></li>
+          <li><a href="#html-questions">HTML</a></li>
+          <li><a href="#css-questions">CSS</a></li>
+        </ul>
+      </nav>
     </header>
-    <hr>
-    <section>
-        <form action="">
-            <label for="name">Name: <input type="text" id="name"></label>
-            <label for="email">Email: <input type="email" id="email"></label>
-            <label for="dob">D.O.B: <input type="date" id="dob"></label>
-        </form>
-    </section>
-
-    <section>
-        <h1>HTML</h1>
-        <hr>
-
-        <h2>Question #1</h2>
-        <div>
-            <p>The legend element represents a caption for the content of its parent fieldset element</p>
-            <label for="true1"><input type="radio" name="radio1" id="true1"> True</label>
-            <label for="false1"><input type="radio" name="radio1" id="false1"> False</label>
-        </div>
-        <h2>Question #2</h2>
-        <div>
-            <p>A label element nesting an input element is required to have
-                 a for attribute with the same value as the input's id</p>
-            <label for="true2"><input type="radio" name="radio2" id="true2">True</label>
-            <label for="false2"><input type="radio" name="radio2" id="false2">False</label>
-        </div>
-    </section>
-    <section>
-        <h1>CSS</h1>
-        <hr>
-
-        <div>
-            <p>Are you an frontend devloper?</p>
-            <select name="drop" id="fd">
-                <option value="1">Select an option</option>
-                <option value="2">Yes</option>
-                <option value="3">No</option>
-            </select>
-            <p>Do you have any question:</p>
-            <textarea name="box" id="box" cols="30" rows="10" placeholder="Who is flexbox..."></textarea>
-        </div>
-    </section>
-    
-        <button type="submit" id="sub" >Submit</button>
-</body>
+    <main>
+      <form method="post" action="https://freecodecamp.org/practice-project/accessibility-quiz">
+        <section role="region" aria-labelledby="student-info">
+          <h2 id="student-info">Student Info</h2>
+          <div class="info">
+            <label for="student-name">Name:</label>
+            <input type="text" name="student-name" id="student-name" />
+          </div>
+          <div class="info">
+            <label for="student-email">Email:</label>
+            <input type="email" name="student-email" id="student-email" />
+          </div>
+          <div class="info">
+            <label for="birth-date">D.O.B.<span class="sr-only">(Date of Birth)</span></label>
+            <input type="date" name="birth-date" id="birth-date" />
+          </div>
+        </section>
+        <section role="region" aria-labelledby="html-questions">
+          <h2 id="html-questions">HTML</h2>
+          <div class="question-block">
+            <p>1</p>
+            <fieldset class="question" name="html-question-one">
+              <legend>
+                The legend element represents a caption for the content of its
+                parent fieldset element
+              </legend>
+              <ul class="answers-list">
+                <li>
+                  <label for="q1-a1">
+                    <input type="radio" id="q1-a1" name="q1" value="true" />
+                    True
+                  </label>
+                </li>
+                <li>
+                  <label for="q1-a2">
+                    <input type="radio" id="q1-a2" name="q1" value="false" />
+                    False
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
+          </div>
+          <div class="question-block">
+            <p>2</p>
+            <fieldset class="question" name="html-question-two">
+              <legend>
+                A label element nesting an input element is required to have a
+                for attribute with the same value as the input's id
+              </legend>
+              <ul class="answers-list">
+                <li>
+                  <label for="q2-a1">
+                    <input type="radio" id="q2-a1" name="q2" value="true" />
+                    True
+                  </label>
+                </li>
+                <li>
+                  <label for="q2-a2">
+                    <input type="radio" id="q2-a2" name="q2" value="false" />
+                    False
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
+          </div>
+        </section>
+        <section role="region" aria-labelledby="css-questions">
+          <h2 id="css-questions">CSS</h2>
+          <div class="formrow">
+            <div class="question-block">
+              <label for="customer">Are you a frontend developer?</label>
+            </div>
+            <div class="answer">
+              <select name="customer" id="customer" required>
+                <option value="">Select an option</option>
+                <option value="yes">Yes</option>
+                <option value="no">No</option>
+              </select>
+            </div>
+            <div class="question-block">
+              <label for="css-questions">Do you have any questions:</label>
+            </div>
+            <div class="answer">
+              <textarea id="css-questions" name="css-questions" rows="5" cols="24" placeholder="Who is flexbox..."></textarea>
+            </div>
+          </div>
+        </section>
+        <button type="submit">Submit</button>
+      </form>
+    </main>
+    <footer>
+      <address>
+        <a href="https://freecodecamp.org">freeCodeCamp</a><br />
+        San Francisco<br />
+        California<br />
+        USA
+      </address>
+    </footer>
+  </body>
 </html>
